fix: update the viewport CSS logic to behave the same when the sidebar layout is used — fixes issue with a slight overflow when resizing the PL iframe to full and the sidebar layout is used

--- a/packages/uikit-workshop/src/sass/scss/04-components/_viewport.scss
+++ b/packages/uikit-workshop/src/sass/scss/04-components/_viewport.scss
@@ -73,7 +73,7 @@
 
   .pl-c-body--theme-sidebar & {
     @media all and (min-width: $pl-bp-med) {
-      max-width: calc(100vw - #{$pl-sidebar-width} + 14px);
+      max-width: calc(100vw - #{$pl-sidebar-width});
     }
   }
 }
@@ -102,7 +102,7 @@
 
   .pl-c-body--theme-sidebar & {
     @media all and (min-width: $pl-bp-med) {
-      max-width: calc(100vw - #{$pl-sidebar-width} + 14px);
+      max-width: calc(100vw - #{$pl-sidebar-width});
     }
   }
 
